backend: add moderation roles
